# 64kformat

./: CMakeLists.txt  README.md  build.sh  hwdetect.c  hwdetect.h  main.c  partition_start.h  readme.h
